--- a/src/app/pages/products-page/product-view/product-view.component.scss
+++ b/src/app/pages/products-page/product-view/product-view.component.scss
@@ -15,31 +15,34 @@
 
 .description-container {
   margin: 20px;
-  padding: 25px;
+  padding: 25px 25px 15px;
   background: #ffffff;
   border: 2px solid rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 
+  .title {
+    display: flex;
 
+    mat-icon {
+      margin-left: auto;
+      border: 1px solid rgba(0, 0, 0, 0.12);
+      border-radius: 2px;
+      color: #5F6368;
+      font-size: 18px;
+      height: 18px;
+      width: 18px;
+      cursor: pointer;
+    }
+  }
 
   textarea {
     box-sizing: border-box;
+    margin-bottom: 10px;
     width: 100%;
     border-radius: 3px;
     border: 1px solid rgba(0, 0, 0, 0.12);
     padding: 6px;
     background: #FFFCEA;
-  }
-
-  .button-container {
-    display: flex;
-    margin-top: 15px;
-
-    button {
-      margin-left: auto;
-      background: $main-color-400;
-      color: #ffffff;
-    }
   }
 }
 
