Add subscriptions (product schedules) to products grid, and remove product schedules index page

--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -100,7 +100,7 @@
           <div class="segment">
             <img src="/assets/images/dashboard/date_range.svg">
             <div class="segment__content">
-              <div class="title" [routerLink]="['/productschedules']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_TITLE' | translate}}</div>
+              <div class="title" [routerLink]="['/products']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_DESCRIPTION' | translate}}</div>
             </div>
           </div>
