--- a/src/app/pages/products-page/products-index/products.component.scss
+++ b/src/app/pages/products-page/products-index/products.component.scss
@@ -64,3 +64,16 @@ bulk-selector {
   left: 50%;
   transform: translateX(-50%);
 }
+
+.subscription-mark {
+  position: absolute;
+  top: 75px;
+  left: 0;
+  padding: 8px 44px;
+  background: #296CCC;
+  border-radius: 4px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid #ffffff;
+}
