--- a/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/products-page/product-schedule-view/product-schedule-view.component.html
@@ -29,6 +29,7 @@
 
       <mat-tab>
         <table-advanced [data]="entity.schedules"
+                        [addEnabled]="entity && entity.schedules.length === 0"
                         [columnParams]="scheduleColumnParams"
                         [entityFactory]="scheduleFactory"
                         [textOptions]="tableTexts"
