--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-header/schedule-details-header.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-header/schedule-details-header.component.html
@@ -5,10 +5,20 @@
   <div *ngIf="product">{{product?.name}}</div>
   <mat-icon [matMenuTriggerFor]="headerOptions" class="menu-icon">more_vert</mat-icon>
   <mat-menu #headerOptions="matMenu" x-position="before">
-    <button mat-menu-item *ngIf="product && product.id" [routerLink]="['/products', 'product', product.id]">View Product</button>
-    <button mat-menu-item *ngIf="productSchedule && productSchedule.id" [routerLink]="['/products', 'subscription', productSchedule.id]">View Product Schedule</button>
-    <button mat-menu-item *ngIf="schedule && schedule.product && schedule.product.id" [routerLink]="['/products', 'product', schedule.product.id]">View Product</button>
-    <button mat-menu-item *ngIf="editable && schedule" (click)="removeSchedule.emit(true)">Remove Schedule from Session</button>
-    <button mat-menu-item *ngIf="editable && productSchedule" (click)="removeProductSchedule.emit(true)">Remove Product Schedule from Session</button>
+    <button mat-menu-item *ngIf="product && product.id" [routerLink]="['/products', 'product', product.id]">
+      View Product
+    </button>
+    <button mat-menu-item *ngIf="!singleScheduleMode && productSchedule && productSchedule.id" [routerLink]="['/products', 'subscription', productSchedule.id]">
+      View Product Schedule
+    </button>
+    <button mat-menu-item *ngIf="schedule && schedule.product && schedule.product.id" [routerLink]="['/products', 'product', schedule.product.id]">
+      View Product
+    </button>
+    <button mat-menu-item *ngIf="singleScheduleMode && editable && schedule" (click)="removeSchedule.emit(true)">
+      Remove Product
+    </button>
+    <button mat-menu-item *ngIf="!singleScheduleMode && editable && productSchedule" (click)="removeProductSchedule.emit(true)">
+      Remove Product Schedule
+    </button>
   </mat-menu>
 </div>
