--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details.component.html
@@ -6,6 +6,7 @@
       [schedule]="_scheduleBackup"
       [productSchedule]="_productSchedule"
       [editable]="editable"
+      [singleScheduleMode]="singleScheduleMode"
       (close)="closeModal()"
       (removeSchedule)="removeSchedule()"
       (removeProductSchedule)="removeProductSchedule()">
@@ -152,12 +153,12 @@
             <mat-icon [matMenuTriggerFor]="scheduleoptions">more_vert</mat-icon>
             <mat-menu #scheduleoptions="matMenu" x-position="before">
               <button mat-menu-item [routerLink]="['/products', 'product', s.product.id]">View Product</button>
-              <button *ngIf="editable" mat-menu-item (click)="deleteSchedule.emit(s)">Delete Schedule</button>
-              <button mat-menu-item (click)="focusSchedule.emit(s)">Focus Schedule</button>
+              <button *ngIf="editable && singleScheduleMode" mat-menu-item (click)="deleteSchedule.emit(s)">Delete Product</button>
+              <button mat-menu-item (click)="focusSchedule.emit(s)">Focus Product</button>
             </mat-menu>
           </div>
 
-          <div *ngIf="editable" class="item item--last">
+          <div *ngIf="editable && _productSchedule.schedules.length === 0" class="item item--last">
             <autocomplete-input
               class="session-autocomplete"
               [initialValue]="productToAdd"
