Rename product subscription to product schedule

--- a/src/app/pages/products-page/product-view/product-view.component.html
+++ b/src/app/pages/products-page/product-view/product-view.component.html
@@ -131,7 +131,7 @@
             </div>
 
             <div class="action-buttons" *ngIf="!editMain && !editSecondary">
-              <button mat-button (click)="createSubscription()">CREATE SUBSCRIPTION</button>
+              <button mat-button (click)="createSubscription()">CREATE SCHEDULE</button>
               <button mat-button (click)="remove()">DELETE</button>
             </div>
           </ng-container>
