--- a/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-header/schedule-details-header.component.html
+++ b/src/app/pages/components/schedules-detailed/schedule-details/schedule-details-header/schedule-details-header.component.html
@@ -8,7 +8,7 @@
     <button mat-menu-item *ngIf="product && product.id" [routerLink]="['/products', 'product', product.id]">
       View Product
     </button>
-    <button mat-menu-item *ngIf="!singleScheduleMode && productSchedule && productSchedule.id" [routerLink]="['/products', 'subscription', productSchedule.id]">
+    <button mat-menu-item *ngIf="!singleScheduleMode && productSchedule && productSchedule.id" [routerLink]="['/products', 'schedule', productSchedule.id]">
       View Product Schedule
     </button>
     <button mat-menu-item *ngIf="schedule && schedule.product && schedule.product.id" [routerLink]="['/products', 'product', schedule.product.id]">
