--- a/src/app/pages/dashboard-page/top-subscriptions/top-subscriptions.component.html
+++ b/src/app/pages/dashboard-page/top-subscriptions/top-subscriptions.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row">
-          <div class="name" [routerLink]="['/products', 'subscription', subscription.subscription]">{{subscription.subscription}}</div>
+          <div class="name" [routerLink]="['/products', 'schedule', subscription.subscription]">{{subscription.subscription}}</div>
           <div class="amount">{{subscription.amount.usd()}}</div>
         </div>
       </div>
