Allow only one product schedule on create new order modal

--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -284,7 +284,7 @@
               </div>
             </mat-expansion-panel>
 
-            <mat-expansion-panel [expanded]="step === 4" (opened)="setStep(4)">
+            <mat-expansion-panel [expanded]="step === 4" (opened)="setStep(4)" [disabled]="shippingDisabled">
               <mat-expansion-panel-header>
                 <div class="expansion-header">
                   <span class="title">
