Disable shipping if at least one product schedule is selected

--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -374,7 +374,7 @@
               </div>
 
               <div class="buttons">
-                <button mat-button (click)="setStep(4)">PREVIOUS</button>
+                <button mat-button (click)="billingPrevious()">PREVIOUS</button>
                 <button mat-button (click)="billingNextStep()">DONE</button>
               </div>
             </mat-expansion-panel>
