Fix build issues, remove feature flags

--- a/src/app/pages/components/entities-table-wrapper/entities-table-wrapper.component.html
+++ b/src/app/pages/components/entities-table-wrapper/entities-table-wrapper.component.html
@@ -1,5 +1,4 @@
-<advanced-entities-table
-  *ngIf="featuresFlagService.isEnabled('advanced-index-tables'); else oldtable"
+<advanced-entities-table *ngIf="newTable; else oldtable"
 
   [data]="data"
   [loaded]="loaded"
