Integrate rebill reattemtp endpoint

--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing-transactions-chart/account-management-billing-transactions-chart.component.html
@@ -8,7 +8,7 @@
 
   <div class="details">
 
-    <div class="box" [class.box--error]="lastBill && !isPaid(lastBill)">
+    <div class="box" [class.box--error]="lastBill && !isPaid(lastBill)" [class.box--success]="lastBill && isPaid(lastBill)">
       <ng-container *ngIf="lastBill">
         <div class="date">
           {{!isPaid(lastBill) ? 'Past Due: ' : 'Previous Billing: '}}{{lastBill.billAt | formatDateTime: 'MMMM Do, YYYY'}}
