--- a/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
+++ b/src/app/pages/account-management-page/account-management-billing/account-management-billing.component.html
@@ -1,8 +1,7 @@
 <blue-header [items]="breadcrumbs" [titleValue]="account ? account.name : null"></blue-header>
 
 <div>
-  <account-management-billing-transactions-chart [lastBill]="lastBill" [nextBill]="nextBill" >
-  </account-management-billing-transactions-chart>
+  <account-management-billing-transactions-chart [lastBill]="lastBill" [nextBill]="nextBill"></account-management-billing-transactions-chart>
 </div>
 
 <div *ngIf="session" class="options">
