Disable view account option on profile page

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -83,6 +83,7 @@
             [associationEnabled]="false"
             [dissociationEnabled]="false"
             (view)="viewAccount($event)"
+            [viewEnabled]="false"
             [textOptions]="accountTextOptions">
           </table-memory>
         </mat-tab>
