svg is no longer supported image format

--- a/src/app/shared/components/image-uploader/image-uploader.component.html
+++ b/src/app/shared/components/image-uploader/image-uploader.component.html
@@ -14,7 +14,7 @@
         {{'PRODUCT_IMAGE_UPLOAD_SELECT' | translate}}
       </label>
       <div class="allowed-instructions">
-        <div>JPG, JPEG, SVG or PNG</div>
+        <div>JPG, JPEG or PNG</div>
         <div>max size 1MB</div>
       </div>
     </ng-container>
