Enable removal of the timezone

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -31,6 +31,7 @@
                 <autocomplete-input
                   [initialValue]="userSettingsBackup.timezone"
                   [options]="timezones"
+                  [emitEmpty]="true"
                   [placeholder]="'PROFILE_DETAILS_TIMEZONE' | translate"
                   (selected)="userSettingsBackup.timezone = $event">
                 </autocomplete-input>
