Work on create order validations and confirmations

--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -370,7 +370,7 @@
               </mat-expansion-panel-header>
 
               <div class="expansion-body expansion-body--no-margin">
-                <payment-form [creditCard]="newCreditCard" [defaultAddress]="selectedShippingAddress"></payment-form>
+                <payment-form [creditCard]="newCreditCard" [stickyDefaultAddress]="selectedShippingAddress"></payment-form>
               </div>
 
               <div class="buttons">
