--- a/src/app/shared/components/filter-table/filter-table.component.scss
+++ b/src/app/shared/components/filter-table/filter-table.component.scss
@@ -221,10 +221,13 @@
       color: #5F6368;
     }
 
+    .checkbox-cell {
+      width: 1px;
+    }
+
     th, td, .head {
       &:first-of-type {
         padding-left: 20px;
-        width: 1px;
         line-height: 16px;
       }
 
