--- a/src/app/pages/products-page/products-index/products.component.html
+++ b/src/app/pages/products-page/products-index/products.component.html
@@ -35,7 +35,7 @@
   <div class="content-wrapper" *ngIf="entities">
 
     <ng-container *ngFor="let entity of entities | filterStrings: filterString: filterFunction">
-      <div class="entity-card" [class.entity-card--selected]="entity.bulkSelected" (click)="selectEntity(entity, $event)">
+      <div class="entity-card" [class.entity-card--selected]="entity.bulkSelected" (click)="selectEntity(entity)">
         <div class="title">{{entity.name}}</div>
 
         <div class="product-image" [style.background-image]="'url(' + getDefaultImagePath(entity) + ')'"></div>
